# skigen-plot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  main.yml  staging.yml
cmake/: SkigenPlotConfig.cmake.in
doc/: Doxyfile  api_registry.json  build-docs.sh
doc/dev-notes/: v1.0.0_requirements.md
doc/guide/: camera3d.mdx  getting-started.mdx  line-plot.mdx  overview.mdx  scatter-plot.mdx
doc/website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
doc/website/docs/api/: boundingbox.mdx  camera3d.mdx  plotview.mdx
doc/website/docs/guide/: camera3d.mdx  line-plot.mdx  overview.mdx  realtime.mdx
doc/website/src/css/: custom.css
doc/website/src/pages/: index.module.css  index.tsx
examples/: CMakeLists.txt  render_gallery.cpp
examples/line/: line_plot.cpp
examples/mesh/: mesh_view.cpp
examples/pointcloud/: point_cloud.cpp
examples/scatter/: scatter_plot.cpp
include/skigen/plot/: core.h  export.h  figure.h  plotview.h  series.h  theme.h
src/: core.cpp  figure.cpp  overlay.cpp  overlay.h  plotview.cpp
src/shaders/: edge3d.vert  line2d.vert  mesh3d.frag  mesh3d.vert  point2d.frag  point2d.vert  point3d.frag  point3d.vert
tests/: CMakeLists.txt  test_core.cpp  test_plotview_data.cpp
